--- a/frontend/front/src/styles.css
+++ b/frontend/front/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+.body {
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(assets/images/fondo.jpg);
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
+}
